EEVEE: Texture Coordinate Node in world shader render artifacts (AMD) #70004

Closed
opened 2019-09-18 07:02:44 +02:00 by Dan Pastean · 12 comments

System Information
Operating system: Windows-10-10.0.17758 64 Bits
Graphics card: Radeon RX 580 Series ATI Technologies Inc. 4.5.13571 Core Profile Context 19.9.2 26.20.13003.1007

Blender Version
Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-17 19:54, hash: 9609840b5e
Worked: (optional)
stable 2.80

Short description of error
Viewport shading glitches bad when using any HDRI, it doesn't show up in reflections, also using in-build textures like (noise, magic, voronoi etc) produces serious performance drops set to anything other then 2D mode.

Exact steps for others to reproduce the error
see screenshot attached Capture.JPG

**System Information** Operating system: Windows-10-10.0.17758 64 Bits Graphics card: Radeon RX 580 Series ATI Technologies Inc. 4.5.13571 Core Profile Context 19.9.2 26.20.13003.1007 **Blender Version** Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-17 19:54, hash: `9609840b5e` Worked: (optional) stable 2.80 **Short description of error** Viewport shading glitches bad when using any HDRI, it doesn't show up in reflections, also using in-build textures like (noise, magic, voronoi etc) produces serious performance drops set to anything other then 2D mode. **Exact steps for others to reproduce the error** see screenshot attached ![Capture.JPG](https://archive.blender.org/developer/F7754811/Capture.JPG)
Author

Added subscriber: @Pastean_Narcis_Dan

Added subscriber: @Pastean_Narcis_Dan

#70159 was marked as duplicate of this issue

#70159 was marked as duplicate of this issue
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Please attach a very simple scene that we can use. Rebuilding every scene for every report takes a long time for a developer and will leave less time for actual bug fixing. Thanks for your help!

Please note that there are other related issues with that specific driver. Could you install the previous AMD driver and see if it is also related to 19.9.2 release of the driver.

Please attach a very simple scene that we can use. Rebuilding every scene for every report takes a long time for a developer and will leave less time for actual bug fixing. Thanks for your help! Please note that there are other related issues with that specific driver. Could you install the previous AMD driver and see if it is also related to 19.9.2 release of the driver.
Member

Might be related to #69972 ([OpenGL Driver Bug] X-ray causes viewport artifacts in Edit Mode when using Solid rendering)

Might be related to #69972 ([OpenGL Driver Bug] X-ray causes viewport artifacts in Edit Mode when using Solid rendering)
Author

viewport_issue.blend

Actually i`ve isolated the issue, its not driver related as the stable recomended driver from AMD 19.5.2 does the same thing. Its also not an HDR issue because it does the same thing no matter what i plug into the background node, it might be the texture coordonate node. see atached screenshots, also i have no issues with the xray with either drivers

with texture coordonate.JPG

without texture coordonate.JPG

[viewport_issue.blend](https://archive.blender.org/developer/F7757438/viewport_issue.blend) Actually i`ve isolated the issue, its not driver related as the stable recomended driver from AMD 19.5.2 does the same thing. Its also not an HDR issue because it does the same thing no matter what i plug into the background node, it might be the texture coordonate node. see atached screenshots, also i have no issues with the xray with either drivers ![with texture coordonate.JPG](https://archive.blender.org/developer/F7757453/with_texture_coordonate.JPG) ![without texture coordonate.JPG](https://archive.blender.org/developer/F7757454/without_texture_coordonate.JPG)
Member

Issue seems to be related to the texture coordinate node, documentation states that it should work.

Might still be related to AMD Driver, but I am not able to reproduce it on HD620. Will have a look into it later today.

Issue seems to be related to the texture coordinate node, documentation states that it should work. Might still be related to AMD Driver, but I am not able to reproduce it on HD620. Will have a look into it later today.
Jeroen Bakker changed title from EEVEE Radeon bug to EEVEE: Texture Coordinate Node render artifacts 2019-09-19 08:38:00 +02:00
Jeroen Bakker self-assigned this 2019-09-19 08:49:03 +02:00
Jeroen Bakker changed title from EEVEE: Texture Coordinate Node render artifacts to EEVEE: Texture Coordinate Node in world shader render artifacts (AMD) 2019-09-19 10:34:02 +02:00
Member

Issue is introduced by {3a08153d7a842b7ab1e40a9048730e1a3ddab5f7}

Issue is introduced by {3a08153d7a842b7ab1e40a9048730e1a3ddab5f7}
Jeroen Bakker removed their assignment 2019-09-19 11:31:08 +02:00
Clément Foucault was assigned by Jeroen Bakker 2019-09-19 11:31:08 +02:00
Member

Added subscribers: @tibor81, @CarlG, @Mets

Added subscribers: @tibor81, @CarlG, @Mets

This issue was referenced by c6995b3095

This issue was referenced by c6995b309527835fac3b720c62b6db21ffd7a047

This is totally a driver bug. I did found a workaround but it is really strange as some other part of the drawing pipeline use the exact same feature and it does not produce unexpected result.

For the record, the issue was that the orco attrib was not bound to any vertex array (which is a valid thing to do, we use it for missing uv/tangent layers).
This seems to work with normal drawcalls but not indirect drawcalls, which is what the driver bug is about.
Note that the orco attrib is not used in the case of background shaders, only by dead code which seems to not be correctly discarded.
Surprisingly, there is no such bug with the uv attrib.

This is totally a driver bug. I did found a workaround but it is really strange as some other part of the drawing pipeline use the exact same feature and it does not produce unexpected result. For the record, the issue was that the `orco` attrib was not bound to any vertex array (which is a valid thing to do, we use it for missing uv/tangent layers). This seems to work with normal drawcalls but not indirect drawcalls, which is what the driver bug is about. Note that the `orco` attrib is not used in the case of background shaders, only by dead code which seems to not be correctly discarded. Surprisingly, there is no such bug with the uv attrib.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70004
No description provided.