Fix T70004 EEVEE: Texture Coordinate Node in world shader render artifacts